# projet_theorie_langages

./: .gitignore  CMakeLists.txt  Makefile  README.md
Objectif_projet_theorie_langages/: CMakeLists.txt
Objectif_projet_theorie_langages/data/: example2.dot  test.dot
Objectif_projet_theorie_langages/include/: automate.h
Objectif_projet_theorie_langages/src/: display.c  main.c  parser.c
data/: example.dot  example1.dot  mots_test.txt
docs/: compile_rapport.sh
docs/latexRapport/: rapport.out  rapport.tex
include/: automate.h
src/: display.c  generate.c  main.c  manipulation.c  parser.c
